--- a/webapp/view/ItemDetails.view.xml
+++ b/webapp/view/ItemDetails.view.xml
@@ -52,7 +52,7 @@
 											<m:Text id="idreqstdBy" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
 											<m:VBox width="100%">
 												<m:MultiComboBox id="idOptionType" width="100%" valueState="None" placeholder="Select Option Type"
-													selectedKeys="{TabDetailsModel>/TabData/OpOptionType}" items="{TabDetailsModel>/OptionTypeSet}">
+													selectedKeys="{TabDetailsModel>/TabData/OpOptionType}" selectionFinish="onSelectionFinish" items="{TabDetailsModel>/OptionTypeSet}">
 													<core:Item key="{TabDetailsModel>OptionCode}" text="{TabDetailsModel>OptionCode}-{TabDetailsModel>OptionCodeDesc}"/>
 												</m:MultiComboBox>
 											</m:VBox>
