--- a/webapp/view/ItemDetails.view.xml
+++ b/webapp/view/ItemDetails.view.xml
@@ -50,9 +50,9 @@
 										<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
 											<m:Label width="10rem" text="Options Type"/>
 											<m:Text id="idreqstdBy" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
-											<m:VBox width="100%">
-												<m:MultiComboBox id="idOptionType" width="100%" valueState="None" placeholder="Select Option Type"
-													selectedKeys="{TabDetailsModel>/TabData/OpOptionType}" selectionFinish="onSelectionFinish" items="{TabDetailsModel>/OptionTypeSet}">
+											<m:VBox width="40rem">
+												<m:MultiComboBox id="idOptionType" width="40rem" valueState="None" placeholder="Select Option Type"
+													selectedKeys="{TabDetailsModel>/aSelectedOptionTypeSet}" selectionFinish="onSelectionFinish" items="{TabDetailsModel>/OptionTypeSet}">
 													<core:Item key="{TabDetailsModel>OptionCode}" text="{TabDetailsModel>OptionCode}-{TabDetailsModel>OptionCodeDesc}"/>
 												</m:MultiComboBox>
 											</m:VBox>
