--- a/webapp/view/ItemDetails.view.xml
+++ b/webapp/view/ItemDetails.view.xml
@@ -1,6 +1,7 @@
 <mvc:View controllerName="com.yaskawa.ETOMyInbox.controller.ItemDetails" xmlns:mvc="sap.ui.core.mvc" xmlns:m="sap.m" xmlns="sap.uxap"
 	xmlns:layout="sap.ui.layout" xmlns:blockcolor="wel.create.po.CreatePO.blocks" xmlns:semantic="sap.f.semantic" xmlns:f="sap.ui.layout.form"
-	xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:t="sap.ui.table" xmlns:u="sap.ui.unified" xmlns:html="http://www.w3.org/1999/xhtml">
+	xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:t="sap.ui.table" xmlns:u="sap.ui.unified" xmlns:html="http://www.w3.org/1999/xhtml"
+	xmlns:c="sap.ui.core">
 	<m:Page title="Item Detail" busy="{objectViewModel>/busy}" showNavButton="false" navButtonPress="onBack">
 		<m:content>
 			<ObjectPageLayout id="ObjectPageLayout" subSectionLayout="{ConfigModel>/subSectionLayout}" useIconTabBar="true" flexEnabled="true"
@@ -46,24 +47,77 @@
 						<subSections>
 							<ObjectPageSubSection id="idOptionTab" title="Options" visible="true" titleUppercase="false" class="tabAlignLeft">
 								<m:VBox>
-									<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">
-										<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
-											<m:Label width="10rem" text="Options Type"/>
-											<m:Text id="idreqstdBy" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
-											<m:VBox width="40rem">
-												<m:MultiComboBox id="idOptionType" width="40rem" valueState="None" placeholder="Select Option Type"
-													selectedKeys="{TabDetailsModel>/aSelectedOptionTypeSet}" selectionFinish="onSelectionFinish" items="{TabDetailsModel>/OptionTypeSet}">
-													<core:Item key="{TabDetailsModel>OptionCode}" text="{TabDetailsModel>OptionCode}-{TabDetailsModel>OptionCodeDesc}"/>
-												</m:MultiComboBox>
-											</m:VBox>
-										</m:HBox>
+									<!--<l:Splitter height="auto">-->
+									<l:Grid defaultSpan="L12 M12 S12" width="auto">
+										<l:content>
+											<m:HBox>
+												<!--<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">-->
+												<!--<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">-->
+												<!--	<m:Label width="10rem" text="Options Type"/>-->
+												<!--	<m:Text id="idreqstdBy" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>-->
+												<!--	<m:VBox width="60rem">-->
+												<!--		<m:MultiComboBox id="idOptionType" width="60rem" valueState="None" placeholder="Select Option Type"-->
+												<!--			selectedKeys="{TabDetailsModel>/aSelectedOptionTypeSet}" selectionFinish="onSelectionFinish" items="{TabDetailsModel>/OptionTypeSet}">-->
+												<!--			<core:Item key="{TabDetailsModel>OptionCode}" text="{TabDetailsModel>OptionCode}-{TabDetailsModel>OptionCodeDesc}"/>-->
+												<!--		</m:MultiComboBox>-->
+												<!--	</m:VBox>-->
+												<!--</m:HBox>-->
+												<m:VBox width="500px" alignContent="Center" class="sapUiSizeCompact">
+													<m:Label text="Selected Options" design="Bold" class="custom_header"/>
+													<t:Table id="id_OperationAddNewRec2" rows="{selOptnsTabModelName>/results}" class="SapUiResponsiveMargin" selectionMode="None"
+														rowActionCount="1" rowSelectionChange="onSelectionAddNewOperationChange" visibleRowCount="5">
+														<t:columns>
+															<t:Column>
+																<!--<m:Label text="{i18n>SelectAll}" design="Bold" textAlign="Center"/>-->
+																<t:template>
+																	<m:Text text="{selOptnsTabModelName>slOptn}"/>
+																</t:template>
+															</t:Column>
+															<!--<t:Column>-->
+															<!--<m:Label text="{i18n>SelectAll}" design="Bold" textAlign="Center"/>-->
+															<!--<t:template>-->
+															<!--<m:Text text="{selOptnsTabModelName>slOptn}"/>-->
+															<!--<core:Icon src="sap-icon://sys-cancel" class="size1" color="#031E48">-->
+															<!--			<core:layoutData>-->
+															<!--				<FlexItemData growFactor="1"/>-->
+															<!--			</core:layoutData>-->
+															<!--		</core:Icon>-->
+															<!--	</t:template>-->
+															<!--</t:Column>-->
+														</t:columns>
+													</t:Table>
+												</m:VBox>
+												<m:VBox width="500px" alignContent="Center" class="sapUiSizeCompact sapUiLargeMarginBegin">
+													<m:Label text="Available Options" design="Bold" class="custom_header"/>
+													<t:Table id="idOptions" rows="{TabDetailsModel>/OptionTypeSet}" class="SapUiResponsiveMargin" selectionMode="None" rowActionCount="1"
+														rowSelectionChange="onSelectionAddNewOperationChange" visibleRowCount="5">
+														<t:columns>
+															<t:Column width="55px">
+																<m:CheckBox id="idFirstCol" selected="false" select="selectAll" textAlign="Center"/>
+																<t:template>
+																	<m:CheckBox selected="false" select="optionsCheck" textAlign="Center"/>
+																</t:template>
+															</t:Column>
+															<t:Column>
+																<m:Label text="{i18n>SelectAll}" design="Bold" textAlign="Center"/>
+																<t:template>
+																	<m:Text text="{TabDetailsModel>OptionCode}-{TabDetailsModel>OptionCodeDesc}"/>
+																</t:template>
+															</t:Column>
+														</t:columns>
+													</t:Table>
+												</m:VBox>
+											</m:HBox>
+										</l:content>
 									</l:Grid>
+									<!--</l:Splitter>-->
 									<l:Grid containerQuery="true" defaultSpan="XL2 L4" class="sapUiSizeCompact">
 										<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
 											<m:Label width="10rem" text="Options"/>
 											<m:Text id="ido" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
-											<m:VBox width="100%">
-												<m:Input value="{TabDetailsModel>/TabData/OpOption}" id="idOption"/>
+											<m:VBox width="1000rem">
+												<!--<m:Input value="{TabDetailsModel>/TabData/OpOption}" id="idOption"/>-->
+												<m:TextArea id="idOption" value="{TabDetailsModel>/TabData/OpOption}" growing="true" growingMaxLines="7" width="500px"/>
 											</m:VBox>
 										</m:HBox>
 									</l:Grid>
@@ -205,14 +259,14 @@
 												<m:Label width="10rem" text="Material Number"/>
 												<m:Text id="idOrdrDate222" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
 												<m:VBox width="100%">
-													<m:Input id="idMaterialNumber" value="{TabDetailsModel>/TabData/ProdMaterial}" editable="false"/>
+													<m:Input id="idMaterialNumber" value="{TabDetailsModel>/TabData/ProdMaterial}" editable="true"/>
 												</m:VBox>
 											</m:HBox>
 											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
 												<m:Label width="10rem" text="Description"/>
 												<m:Text text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
 												<m:VBox width="100%">
-													<m:Input id="idDecription" value="{TabDetailsModel>/TabData/ProdDesc}" editable="false"/>
+													<m:Input id="idDecription" value="{TabDetailsModel>/TabData/ProdDesc}" editable="true"/>
 												</m:VBox>
 											</m:HBox>
 										</l:Grid>
@@ -223,7 +277,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idPrimaryPlant" width="100%" valueState="None" placeholder="Select Primary Plant"
 														selectedKey="{TabDetailsModel>/TabData/ProdPlant}" items="{TabDetailsModel>/PlantSet}">
-														<core:Item key="{TabDetailsModel>Werks}" text="{TabDetailsModel>Werks}"/>
+														<core:Item key="{TabDetailsModel>Werks}" text="{TabDetailsModel>Werks}-{TabDetailsModel>NAME1}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -231,10 +285,16 @@
 												<m:Label width="10rem" text="Product Hierarchy"/>
 												<m:Text id="idOrdrDate211" text=":" class="sapUiTinyMarginBeginEnd"></m:Text>
 												<m:VBox width="100%">
-													<m:ComboBox id="idProdHrchy" width="100%" valueState="None" placeholder="Select Material Pricing"
-														selectedKey="{TabDetailsModel>/TabData/ProdHierarchy}" items="{TabDetailsModel>/ProductHierarchySet}">
-														<core:Item key="{TabDetailsModel>PRODH}" text="{TabDetailsModel>PRODH}"/>
-													</m:ComboBox>
+													<!--<m:ComboBox id="idProdHrchy" width="100%" valueState="None" placeholder="Select Material Pricing"-->
+													<!--	selectedKey="{TabDetailsModel>/TabData/ProdHierarchy}" items="{TabDetailsModel>/ProductHierarchySet}">-->
+													<!--	<core:Item key="{TabDetailsModel>PRODH}" text="{TabDetailsModel>PRODH}"/>-->
+													<!--</m:ComboBox>-->
+													<m:Input id="idProdHrchy" showSuggestion="true" showValueHelp="false" suggestionItemSelected="ProdHrchyValueHelpRequest"
+														suggestionItems="{productHierarchyModelName>/results}" liveChange="ProdHrchySelectionChange">
+														<m:suggestionItems>
+															<core:Item text="{productHierarchyModelName>PRODH}-{productHierarchyModelName>VTEXT}"/>
+														</m:suggestionItems>
+													</m:Input>
 												</m:VBox>
 											</m:HBox>
 											<m:HBox width="100%" alignItems="Center" class="sapUiSmallMarginBegin">
@@ -265,7 +325,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idprocurementType" width="100%" valueState="None" placeholder="Select Procurement"
 														selectedKey="{TabDetailsModel>/TabData/ProdProcurementType}" items="{TabDetailsModel>/ProcurementTypeSet}">
-														<core:Item key="{TabDetailsModel>DOMVALUE_L}" text="{TabDetailsModel>DDTEXT}"/>
+														<core:Item key="{TabDetailsModel>DOMVALUE_L}" text="{TabDetailsModel>DDTEXT}-{TabDetailsModel>DOMVALUE_L}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -275,7 +335,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idMatGrp1" width="100%" valueState="None" placeholder="Select Material Group1 Type"
 														selectedKey="{TabDetailsModel>/TabData/ProdMatGrp1}" items="{TabDetailsModel>/MaterialGroup1Set}">
-														<core:Item key="{TabDetailsModel>MVGR1}" text="{TabDetailsModel>MVGR1}"/>
+														<core:Item key="{TabDetailsModel>MVGR1}" text="{TabDetailsModel>MVGR1}-{TabDetailsModel>BEZEI}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -287,7 +347,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idOvrHdGrp" width="100%" valueState="None" placeholder="Select OverHead"
 														selectedKey="{TabDetailsModel>/TabData/ProdOverheadGrp}" items="{TabDetailsModel>/OverheadGroupSet}">
-														<core:Item key="{TabDetailsModel>KOSGR}" text="{TabDetailsModel>KOSGR}"/>
+														<core:Item key="{TabDetailsModel>KOSGR}" text="{TabDetailsModel>KOSGR}-{TabDetailsModel>TXZSCHL}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -307,7 +367,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idMRPType" width="100%" valueState="None" placeholder="Select MRP" selectedKey="{TabDetailsModel>/TabData/ProdMrpType}"
 														items="{TabDetailsModel>/MRPTypeSet}">
-														<core:Item key="{TabDetailsModel>DISMM}" text="{TabDetailsModel>DISMM}"/>
+														<core:Item key="{TabDetailsModel>DISMM}" text="{TabDetailsModel>DISMM}-{TabDetailsModel>DIBEZ}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -351,7 +411,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idMatGrp" width="100%" valueState="None" placeholder="Select Material Group"
 														selectedKey="{TabDetailsModel>/TabData/MaterialGroup}" items="{TabDetailsModel>/MaterialGroupSet}">
-														<core:Item key="{TabDetailsModel>MATKL}" text="{TabDetailsModel>MATKL}"/>
+														<core:Item key="{TabDetailsModel>MATKL}" text="{TabDetailsModel>MATKL}-{TabDetailsModel>WGBEZ60}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -429,7 +489,7 @@
 												<m:VBox width="100%">
 													<m:ComboBox id="idReqGrp" width="100%" valueState="None" placeholder="Select Req Group"
 														selectedKey="{TabDetailsModel>/TabData/MaterialRequirementGrp}" items="{TabDetailsModel>/RequirementsGroupSet}">
-														<core:Item key="{TabDetailsModel>DOMVALUE_L}" text="{TabDetailsModel>DDTEXT}"/>
+														<core:Item key="{TabDetailsModel>DOMVALUE_L}" text="{TabDetailsModel>DDTEXT}-{TabDetailsModel>DOMVALUE_L}"/>
 													</m:ComboBox>
 												</m:VBox>
 											</m:HBox>
@@ -497,11 +557,20 @@
 													<m:Input maxLength="30"
 														value="{ path: 'TabDetailsModel>Manufaturer', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
 														editable="{= ${TabDetailsModel>EditMode} ? true : false}"/>
-													<m:Input maxLength="30"
-														value="{ path: 'TabDetailsModel>PartNumber', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
-														editable="{= ${TabDetailsModel>EditMode} ? true : false}"/>
-													<m:Input maxLength="30"
-														value="{ path: 'TabDetailsModel>Description', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
+													<!--<m:Input maxLength="30"-->
+													<!--	value="{ path: 'TabDetailsModel>PartNumber', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"-->
+													<!--	editable="{= ${TabDetailsModel>EditMode} ? true : false}"/>-->
+													<m:Input maxLength="300" showSuggestion="true" showValueHelp="false" suggestionItemSelected="onpartNumberValueHelpRequest"
+														suggestionItems="{partNumberModelName>/results}" liveChange="partNumberSelectionChange">
+														<m:suggestionItems>
+															<core:Item text="{partNumberModelName>PartNo}"/>
+														</m:suggestionItems>
+													</m:Input>
+													<!--<m:ComboBox items="{partNoModelName>/results}" change="partNumberSelectionChange">-->
+													<!--	<core:Item key="{partNoModelName>PartNo}" text="{partNoModelName>PartDesc}"/>-->
+													<!--</m:ComboBox>-->
+													<m:Input maxLength="3000" id="idPnDescription"
+														value="{ path: 'TabDetailsModel>Description', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 3000 } }"
 														editable="{= ${TabDetailsModel>EditMode} ? true : false}"/>
 													<m:HBox>
 														<m:Button visible="{= ${globalModel>/visibilityField} === '' ? true : false }" class="sapUiTinyMarginBeginEnd" text="Edit" type="Emphasized"
